# stock_alerts

./: .env_template  .gitignore  Cargo.toml  LICENSE  README.md  config.toml
local/: .gitignore  template.csv
src/: main.rs
src/stock_file_io/: aws.rs  local.rs  mod.rs
src/stock_price_connector/: mod.rs
