[package]
name = "stock_alerts"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.0"
csv = "1.3.0"
toml = "0.8.16"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.5", features = ["json"] }
dotenv = "0.15.0"
tokio-macros = { version = "0.2.0-alpha.6" }
tokio = { version = "1.39.2", features = ["full"] }
rand = "0.8.5"
